fix: update overflow scroll for tweet

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -38,7 +38,8 @@ article.tweet h4 {
 }
 
 article.tweet p {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 /* TWEET FOOTER */
